fix: alignment

--- a/src/Components/UI/Navigation/NavBarTop.css
+++ b/src/Components/UI/Navigation/NavBarTop.css
@@ -10,6 +10,7 @@
     background-color: var(--nav-bar-bg);
     color: var(--text-white);
     display: flex;
+    align-items: center;
     justify-content: space-between;
     position: fixed;
     top: 0rem;
